source/stylesheets/components/_nav.scss
.btn {
  outline: none;
  border: none;
  transition: 0.3s;
  cursor: pointer;
}

img {
  display: flex;
  width: 100%;
}

a {
  text-decoration: none;
  transition: 0.3s;
}

body {
  font-family: "Montserrat", sans-serif;
}

nav {
  position: relative;
  isolation: isolate;
  width: 100%;
  z-index: 9;
  color: #473c34;
  padding: 2rem 5rem;
  max-width: var(--max-width);
  margin-inline: auto;
  display: flex;
  align-items: center;
  justify-content: space-between;
  gap: 2rem;
}

.nav__header {
  width: 100%;
  display: flex;
  align-items: center;
  justify-content: space-between;
  background-color: var(--text-dark);
  flex: 1;
  padding: 0;
  background-color: transparent;
}

.nav__logo a {
  font-size: 1.5rem;
  font-weight: 700;
  color: var(--white);
}

.nav__menu__btn {
  font-size: 1.5rem;
  color: var(--white);
  cursor: pointer;
  display: none;
}

.nav__links {
  left: 0;
  width: 100%;
  list-style: none;
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 2rem;
  background-color: var(--text-dark);
  transition: 0.5s;
  z-index: -1;
  transform: translateY(-100%);
  position: relative;
  padding: 0;
  flex-direction: row;
  background-color: transparent;
  transform: none;
  margin-bottom: 0;
  list-style: none;
}

.nav__links.open {
  transform: translateY(0);
}

.nav__links a {
  font-weight: 600;
  color: var(--primary-color);
}

.nav__links a:hover {
  color: var(--white);
}

.nav__btns {
  flex: 1;
  display: flex;
  align-items: center;
  gap: 1rem;
}

.nav__btns .btn {
  font-size: 1.5rem;
  color: var(--text-dark);
  background-color: transparent;
}



@media (max-width: 768px) {
  .nav__links {
    display: none; /* Initially hide the links */
    flex-direction: column;
    background-color: var(--text-dark);
    position: absolute;
    top: 60px;
    left: 0;
    width: 100%;
    z-index: 99;
    padding: 1rem;
  }

  .nav__links.open {
    display: flex; /* Show links when open */
  }

  /* Style the burger icon */
  .nav__menu__btn {
    font-size: 2rem;
    cursor: pointer;
    display: block;
  }

  /* Adjust the padding for small screens */
  nav {
    padding: 1.5rem;
  }

  .nav__btns {
    display: none;
  }
}


@media all and (max-width: 600px) {
  nav {
    padding: 2rem;
  }
}

